🐞 fix z-index issue with dropdowns in modals

--- a/hcu-urban-model-builder-client/app/styles/app.scss
+++ b/hcu-urban-model-builder-client/app/styles/app.scss
@@ -82,7 +82,7 @@
 }
 
 .ember-basic-dropdown-content {
-  z-index: 1055;
+  z-index: 1057;
   &:has(.formula__search) {
     max-height: 50vh;
     overflow-y: scroll;
